@@ -1,0 +1,14 @@
+# use-arrow-operator
+
+Finds code such as:
+
+```
+QScopedPointer<T> ptr...;
+ptr.data()->someFunc();
+```
+
+and suggests to use the arrow operator(`->`) directly instead:
+
+```
+ptr->someFunc();
+```
