@@ -1,6 +1,8 @@
 # Changelog
 
 * v1.11 (TBD)
+  - New Checks:
+    - use-arrow-operator
 
 * v1.10 (July 20th 2021)
    - Requires C++17
